--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduardo Magno</title>
+    <title>Repositório público Eduardo Magno</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <p>Cabeçalho</p>
-    </header>
     <main>
-        <p>Principal</p>
+        <h1>Respositório público Eduardo Magno</h1>
     </main>
-    <footer>
-        <p>Rodapé</p>
-    </footer>
 </body>
 </html>
