--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repositório público Eduardo Magno</title>
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <main>
+    <header>
         <h1>Repositório público Eduardo Magno</h1>
         <p>Todos os meus projetos compilados neste site para facilitar a organização</p>
+    </header>
+    <main>
         <h2>CursoemVideo</h2>
         <p>Todos os meus cursos feitos através da plataforma <a href="https://www.cursoemvideo.com" target="_blank" rel="external">CursoemVideo</a></p>
         <ul>
