modificações no design

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </header>
     <main>
         <h2>CursoemVideo</h2>
-        <p>Todos os meus cursos feitos através da plataforma <a href="https://www.cursoemvideo.com" target="_blank" rel="external">CursoemVideo</a></p>
+        <p>Todos os meus cursos feitos através da plataforma <a href="https://www.cursoemvideo.com" target="_blank" rel="external" class="externo">CursoemVideo</a></p>
         <ul>
             <li>
                 <h3>HTML5 e CSS3:</h3>
-                <p>Módulos 1 e 2 do <strong>curso de HTML5 e CSS3</strong>, com os exercícios e desafios atualizados de acordo com as postagens no <a href="https://www.youtube.com/cursoemvideo" target="_blank" rel="external">canal do YouTube</a></p>
+                <p>Módulos 1 e 2 do <strong>curso de HTML5 e CSS3</strong> completos, com os exercícios e desafios atualizados de acordo com as postagens feitas no <a href="https://www.youtube.com/cursoemvideo" target="_blank" rel="external" class="externo">canal do YouTube</a></p>
                 <p><a href="https://github.com/magaldimagno/html-css" target="self" rel="next">Clique aqui</a> para acessar o meu repositório</p>
             </li>   
         </ul>
