--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <article>
             <h3>HTML5 e CSS3:</h3>
             <p>Módulos 1 e 2 do <strong>curso de HTML5 e CSS3</strong> completos, com os exercícios e desafios atualizados de acordo com as postagens feitas no <a href="https://www.youtube.com/cursoemvideo" target="_blank" rel="external" class="externo">canal do YouTube</a></p>
-            <p><a href="https://github.com/magaldimagno/html-css" target="_self" rel="next">Clique aqui</a> para acessar o meu repositório</p>
+            <p><a href="https://github.com/magaldimagno/html-css" target="_self" rel="next">Clique aqui</a> para acessar o repositório</p>
         </article>
     </main>
 </body>
